--- a/style.css
+++ b/style.css
@@ -32,3 +32,23 @@
 	background-color: green;
 	color: white;
 }
+
+.kontak {
+	background-color: aquamarine;
+	padding-bottom: 25px;
+	margin: 50px;
+	border-radius: 15px;
+	border: 2px red solid;
+	height: 200px;
+}
+
+.kontak b {
+	background: linear-gradient(90deg, red 50%, blue);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-size: 35px;
+}
+
+.kontak img:hover {
+	width: 125px;
+}
