--- a/style.css
+++ b/style.css
@@ -1,36 +1,105 @@
-.container {
-	width: 100%;
+body {
+	background-color: lightblue;
+	text-align: center;
+	font-family: monospace;
+	padding-bottom: 25px;
+}
+
+header {
+	background: lightcoral;
+	color: white;
+	padding: 5px;
+	border-radius: 25px;
+}
+
+/* update tgl 15 nov */
+nav {
 	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: center;
+    flex-direction: row;
+	flex-wrap: wrap; 
+    justify-content: flex-start;
 }
 
-.box-red {
-	width: 200px;
-	height: 200px;
+nav a {
+	text-decoration: none;
+	color:white;
+	font-size: 25px;
+	margin: 0 5px;
+	padding: 15px;
+	border-radius: 20px;
+}
+
+nav a:hover{
+	background-color: grey;
+}
+
+nav b {
+	font-size: 35px;
+	margin-left: auto;
 	padding: 5px;
-	margin: 5px;
-	background-color: red;
+	border-radius: 15px;
+	background-color: white;
+	color: black;
+}
+
+/* end of update tgl 15 nov */
+
+/* row and column */
+.row {
+    display: flex;
+}
+
+.column {
+    flex: 50%;
+    padding: 10px;
+}
+
+/* end of row and column */
+
+.perkenalan {
+	background-color:burlywood;
+	margin: 50px;
+	border-radius: 50px;
+}
+
+.perkenalan img {
+	padding: 5%;
+}
+
+.perkenalan h4 {
+	text-align: left;
+	font-size: 50px;
+}
+
+.perkenalan p {
+	text-align: left;
+	font-size: 25px;
+}
+
+.biodata {
+	background-color: antiquewhite;
+	margin: 50px;
+	border-radius: 25px;
+	font-size: 25px;
+	padding: 15px;
+}
+
+.biodata .header {
+	background: linear-gradient(90deg, pink 20%, darkblue);
+	border-radius: 20px;
 	color: white;
 }
 
-.box-blue {
-	width: 200px;
-	height: 200px;
-	padding: 5px;
+.biodata h1, .biodata h3 {
 	margin: 5px;
-	background-color: blue;
-	color: white;
 }
 
-.box-green {
-	width: 200px;
-	height: 200px;
-	padding: 5px;
-	margin: 5px;
-	background-color: green;
-	color: white;
+.biodata .tabel {
+	font-family: Calibri;
+}
+
+.biodata .list {
+	padding-left: 150px;
 }
 
 .kontak {
@@ -45,10 +114,50 @@
 .kontak b {
 	background: linear-gradient(90deg, red 50%, blue);
 	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent;
 	font-size: 35px;
 }
 
 .kontak img:hover {
 	width: 125px;
 }
+
+.tentang {
+	background-color: orangered;
+	padding: 15px;
+	margin: 50px;
+	border-radius: 15px;
+}
+
+.tentang .header {
+	font-size: 50px;
+	color: white;
+}
+
+.tentang .body {
+	background-color: white;
+	padding: 2px;
+	margin: 15px -15px -25px -15px;
+	border-radius: 10px;
+}
+
+.tentang .body p {
+	font-size: 20px;
+	width: 100%;
+}
+
+.tentang .link {
+	padding: 2px;
+	margin: 15px -25px -15px -25px;
+	border-radius: 10px;
+}
+
+.tentang .link img {
+	width: 150px;
+}
+
+.tentang .link img:hover {
+	border:3px solid black;
+	width: 144px;
+}
+
